#	$calcurse: Makefile.am,v 1.7 2010/03/22 12:40:16 culot Exp $

AUTOMAKE_OPTIONS= foreign

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = po src

man_MANS= src/calcurse.1

EXTRA_DIST = \
	     $(man_MANS) \
	     INSTALL \
	     ABOUT-NLS \
             doc/manual.css     \
	     doc/manual_en.html \
	     doc/manual_fr.html \
	     doc/manual_de.html \
	     doc/manual_es.html \
	     doc/manual_nl.html \
             doc/manual_it.html
